k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: siham
  labels:
    name: siham
